Transactions API (#8)
* Added get transaction by hash api endpoint

* Added transaction traces api handler

* Updated API docs

* Linter

* In traces replaced join with tx table with separate query to find tx id

* Offset param in list requests minimal value setted to 0

* Added transactions list endpoint
